gccida/c1/asm_output_aligned_bss
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/asm_output_aligned_bss/src/varasm.c:1033:32: error: use of undeclared identifier 'off_6E2E28'
fprintf( file, ( const char *)&off_6E2E28 + 4, "\t.zero\t", v11); 
                               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/asm_output_aligned_bss/src/obj/varasm.o] Error 1
